--- a/lib/compass/_functions.scss
+++ b/lib/compass/_functions.scss
@@ -1,3 +1,4 @@
+@import "functions/compact";
 @import "functions/lists";
 @import "functions/cross_browser_support";
 @import "functions/gradient_support";
